--- a/05. Spring Data Intro/Lab/src/main/resources/application.properties
+++ b/05. Spring Data Intro/Lab/src/main/resources/application.properties
@@ -2,15 +2,18 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_intro?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=showMeTheCode2020
+spring.datasource.password=00000
+
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
+
 ###Logging Levels
 # Disable the default loggers
 logging.level.org=WARN
 logging.level.blog=WARN
+
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
