--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,82 @@
 
 04. Hibernate Code First/Lab/~$04. Hibernate-Code-First.pptx
+05. Spring Data Intro/Exercise/.idea/compiler.xml
+05. Spring Data Intro/Exercise/.idea/encodings.xml
+05. Spring Data Intro/Exercise/.idea/jarRepositories.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__antlr_antlr_2_7_7.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__ch_qos_logback_logback_classic_1_2_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__ch_qos_logback_logback_core_1_2_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_fasterxml_classmate_1_5_1.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_jayway_jsonpath_json_path_2_5_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_sun_activation_jakarta_activation_1_2_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_sun_istack_istack_commons_runtime_3_0_12.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_vaadin_external_google_android_json_0_0_20131108_vaadin1.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__com_zaxxer_HikariCP_4_0_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__jakarta_activation_jakarta_activation_api_1_2_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__jakarta_annotation_jakarta_annotation_api_1_3_5.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__jakarta_persistence_jakarta_persistence_api_2_2_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__jakarta_transaction_jakarta_transaction_api_1_3_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__jakarta_xml_bind_jakarta_xml_bind_api_2_3_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__mysql_mysql_connector_java_8_0_25.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__net_bytebuddy_byte_buddy_1_10_22.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__net_bytebuddy_byte_buddy_agent_1_10_22.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__net_minidev_accessors_smart_2_4_7.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__net_minidev_json_smart_2_4_7.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_apache_logging_log4j_log4j_api_2_14_1.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_apache_logging_log4j_log4j_to_slf4j_2_14_1.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_apiguardian_apiguardian_api_1_1_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_aspectj_aspectjweaver_1_9_6.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_assertj_assertj_core_3_19_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_dom4j_dom4j_2_1_3.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_glassfish_jaxb_jaxb_runtime_2_3_4.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_glassfish_jaxb_txw2_2_3_4.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_hamcrest_hamcrest_2_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_hibernate_common_hibernate_commons_annotations_5_1_2_Final.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_hibernate_hibernate_core_5_4_32_Final.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_javassist_javassist_3_27_0_GA.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_jboss_jandex_2_2_3_Final.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_4_2_Final.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_5_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_api_5_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_engine_5_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_jupiter_junit_jupiter_params_5_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_platform_junit_platform_commons_1_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_junit_platform_junit_platform_engine_1_7_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_mockito_mockito_core_3_9_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_mockito_mockito_junit_jupiter_3_9_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_objenesis_objenesis_3_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_opentest4j_opentest4j_1_2_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_ow2_asm_asm_9_1.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_skyscreamer_jsonassert_1_5_0.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_slf4j_jul_to_slf4j_1_7_31.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_31.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_autoconfigure_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_aop_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_data_jpa_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_jdbc_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_logging_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_test_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_test_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_boot_spring_boot_test_autoconfigure_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_data_spring_data_commons_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_data_spring_data_jpa_2_5_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_aop_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_aspects_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_beans_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_context_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_core_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_expression_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_jcl_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_jdbc_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_orm_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_test_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_springframework_spring_tx_5_3_8.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_xmlunit_xmlunit_core_2_8_2.xml
+05. Spring Data Intro/Exercise/.idea/libraries/Maven__org_yaml_snakeyaml_1_28.xml
+05. Spring Data Intro/Exercise/.idea/misc.xml
+05. Spring Data Intro/Exercise/.idea/modules.xml
+05. Spring Data Intro/Exercise/.idea/vcs.xml
+05. Spring Data Intro/Exercise/springintro.iml
+05. Spring Data Intro/Lab/src/main/java/com/example/demo_test/Repositories/UserRepository.java
