--- a/05. Spring Data Intro/Exercise/springintro_practice/src/main/resources/application.properties
+++ b/05. Spring Data Intro/Exercise/springintro_practice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_intro?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_practice?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=00000
 #JPA Properties
