--- a/05. Spring Data Intro/Exercise/spring_intro_solved/src/main/resources/application.properties
+++ b/05. Spring Data Intro/Exercise/spring_intro_solved/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_data_intro?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=ENTER_PASSWROD
+spring.datasource.password=ENTER_PASSWORD
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
