--- a/06. Spring Data Advanced Quering/Lab/AdvancedQuering_LAB/pom.xml
+++ b/06. Spring Data Advanced Quering/Lab/AdvancedQuering_LAB/pom.xml
@@ -9,12 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>springintro</artifactId>
+    <artifactId>advquerying</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springintro</name>
+    <name>advquerying</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>16</java.version>
     </properties>
     <dependencies>
         <dependency>
