--- a/06. Spring Data Advanced Quering/Lab/AdvancedQuering_LAB/src/main/resources/application.properties
+++ b/06. Spring Data Advanced Quering/Lab/AdvancedQuering_LAB/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shampoo_company?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=showMeTheCode2020
+spring.datasource.password=12345
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
