--- a/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise_practice/pom.xml
+++ b/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise_practice/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
