--- a/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise_practice/pom.xml
+++ b/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise_practice/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
         <dependency>
             <groupId>org.modelmapper</groupId>
