--- a/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise/pom.xml
+++ b/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>DTO_Exercise_practice</artifactId>
+    <artifactId>DTO_Exercise</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>DTO_Exercise_practice</name>
+    <name>DTO_Exercise</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
@@ -34,26 +34,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
-        <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>3.2.0</version>
-        </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-            <version>3.3.2</version>
         </dependency>
 
         <dependency>
@@ -66,7 +49,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
