--- a/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise/pom.xml
+++ b/07. Spring Data Auto Mapping Objects/Exercise/DTO_Exercise/pom.xml
@@ -49,10 +49,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.2</version>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper-examples</artifactId>
+            <version>2.4.4</version>
         </dependency>
 
     </dependencies>
