--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@
 *.xml
 08. JSON Processing/carDealer/springdataautomappinobject.iml
 08. JSON Processing/carDealer/springdataautomappinobject.iml
+07. Spring Data Auto Mapping Objects/Exercise/~$. Spring-Data-Auto-Mapping-Objects-Exercises.docx
