--- a/08. JSON Processing/Exercise/productShop/productShop_practice/src/main/resources/application.properties
+++ b/08. JSON Processing/Exercise/productShop/productShop_practice/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/json_ex_demo?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=00000
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
