--- a/08. JSON Processing/Exercise/carDealer/carDealer_solved/src/main/resources/application.properties
+++ b/08. JSON Processing/Exercise/carDealer/carDealer_solved/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #Data Source Properties
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/car_dealer?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/car_dealerss?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=00000
 #JPA Properties
