--- a/09. XML Processing/Lab/mappingObjectsLab/src/main/resources/application.properties
+++ b/09. XML Processing/Lab/mappingObjectsLab/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mappingObjects?useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/xml_lab?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=00000
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
