--- a/09. XML Processing/Lab/mappingObjectsLab/src/main/resources/application.properties
+++ b/09. XML Processing/Lab/mappingObjectsLab/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/xml_lab?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mappingObjects?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=00000
 #JPA Properties
