add to  gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@
 08. JSON Processing/carDealer/springdataautomappinobject.iml
 08. JSON Processing/carDealer/springdataautomappinobject.iml
 07. Spring Data Auto Mapping Objects/Exercise/~$. Spring-Data-Auto-Mapping-Objects-Exercises.docx
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
