cfg : add jaxb and modelMapper dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,5 @@
 07. Spring Data Auto Mapping Objects/Exercise/~$. Spring-Data-Auto-Mapping-Objects-Exercises.docx
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/shop/shop.iml~
+09. XML Processing/Exercise/practice/shop/shop.iml
