--- a/09. XML Processing/Exercise/practice/shop/pom.xml
+++ b/09. XML Processing/Exercise/practice/shop/pom.xml
@@ -37,6 +37,13 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!-- JAXB RI -->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
         <dependency>
             <groupId>org.modelmapper</groupId>
