--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/shop.iml~
 09. XML Processing/Exercise/practice/shop/shop.iml
+*.xml
