--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@
 09. XML Processing/Exercise/practice/shop/shop.iml~
 09. XML Processing/Exercise/practice/shop/shop.iml
 *.xml
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
