add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@
 09. XML Processing/Exercise/practice/shop/shop.iml
 *.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
