--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@
 *.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/carDealer/.idea/workspace.xml
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
