--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/carDealer/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
