--- a/09. XML Processing/Exercise/practice/carDealer/pom.xml
+++ b/09. XML Processing/Exercise/practice/carDealer/pom.xml
@@ -62,6 +62,13 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- JAXB RI -->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
