--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,4 @@
 09. XML Processing/Exercise/practice/carDealer/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
+09. XML Processing/Exercise/practice/carDealer/.idea/workspace.xml
