--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@
 09. XML Processing/Exercise/practice/shop/.idea/workspace.xml
 09. XML Processing/Exercise/practice/carDealer/.idea/workspace.xml
 13. Exam preparation/realDeal/realDeal.iml
+12. Exam practice/Java DB Spring Data Regular Exam - 29 March 2020/~$al Deal_Problem Description.docx
