--- a/13. WorkShop/nextLevelTech/pom.xml
+++ b/13. WorkShop/nextLevelTech/pom.xml
@@ -37,6 +37,11 @@
             <version>3.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
